istio/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: development
spec:
  hosts:
  - "upm.eastus2.cloudapp.azure.com"
  gateways:
  - istio-system/default
  http:
  - match:
    - uri:
        prefix: /api/v1/demo/
    rewrite:
      uri: /
    route:
    - destination:
        port:
          number: 8080
        host: petstore.default.svc.cluster.local

  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 3001
        host: upm-ui
